[gd_scene load_steps=26 format=3 uid="uid://b3trh6sc7bkeq"]

[ext_resource type="Script" uid="uid://oidhfjf35vx5" path="res://scripts/battle_main.gd" id="1_j7yva"]
[ext_resource type="Script" uid="uid://do3ik1jop56ta" path="res://scripts/battle_timeline.gd" id="2_ekamt"]
[ext_resource type="Script" uid="uid://l6vctxv60i5k" path="res://scripts/temporal_recorder.gd" id="2_kjq4e"]
[ext_resource type="Shader" uid="uid://dvimhyltktrda" path="res://shaders/sonar.gdshader" id="2_qdfj8"]
[ext_resource type="PackedScene" uid="uid://bxvkgl6pp7mn0" path="res://scenes/character.tscn" id="2_sm623"]
[ext_resource type="Script" uid="uid://bib83etyoggcu" path="res://scripts/sonar_display.gd" id="3_m8v8v"]
[ext_resource type="Script" uid="uid://82hb1gbig1h3" path="res://scripts/sonar_sensor.gd" id="4_3fx1x"]
[ext_resource type="Script" uid="uid://dpky47433cafo" path="res://scripts/ai_control.gd" id="5_3g8p0"]
[ext_resource type="Texture2D" uid="uid://bs1tb484wprlw" path="res://textures/asteroid.png" id="5_7e0bu"]
[ext_resource type="Texture2D" uid="uid://b3l70a8ih0ytb" path="res://textures/stars_larger.png" id="5_vceff"]
[ext_resource type="Script" uid="uid://dusbajbexl3be" path="res://scripts/target_assist.gd" id="6_cj32i"]
[ext_resource type="Texture2D" uid="uid://4vj0r5txy10y" path="res://textures/BASE.png" id="10_66ngm"]
[ext_resource type="Script" uid="uid://upxd16rpbdyu" path="res://scripts/team.gd" id="11_hwhwn"]
[ext_resource type="Texture2D" uid="uid://brm4ixhsdwp84" path="res://textures/stars_small_background.png" id="12_03edq"]
[ext_resource type="Texture2D" uid="uid://xwsqnqwtnq0y" path="res://textures/stars_medium.png" id="13_6ni85"]
[ext_resource type="Texture2D" uid="uid://c17dww6b56361" path="res://textures/stars_large.png" id="14_vceff"]
[ext_resource type="Script" uid="uid://bg8pweqwdny4o" path="res://scripts/battle_debris.gd" id="15_p0caf"]
[ext_resource type="Script" uid="uid://3np7r4qj40n6" path="res://scripts/health.gd" id="18_h4dll"]
[ext_resource type="Texture2D" uid="uid://dvsc27stwcqkh" path="res://textures/target.png" id="19_p0caf"]

[sub_resource type="LabelSettings" id="LabelSettings_gqr64"]
font_size = 100

[sub_resource type="ShaderMaterial" id="ShaderMaterial_th0af"]
shader = ExtResource("2_qdfj8")
shader_parameter/aspect_ratio = 2.0
shader_parameter/angle = 2.356
shader_parameter/sonar_width_percent = 0.05

[sub_resource type="LabelSettings" id="LabelSettings_vceff"]
font_size = 50

[sub_resource type="CircleShape2D" id="CircleShape2D_58h07"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o607b"]
radius = 249.12848

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jscwi"]
radius = 71.78877
height = 225.40234

[node name="battle" type="Node2D"]
script = ExtResource("1_j7yva")

[node name="timeline" type="Node" parent="."]
script = ExtResource("2_ekamt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(1024, 0)
transform = Transform2D(1, 0, 0, 1, 1024, 0)

[node name="background_layer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.001, 0.001)
motion_offset = Vector2(2048, 2230)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/background_layer"]
texture_repeat = 3
texture = ExtResource("12_03edq")
region_enabled = true
region_rect = Rect2(0, 0, 4096, 4096)

[node name="background_layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.002, 0.002)
motion_offset = Vector2(2048, 2230)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/background_layer2"]
texture_repeat = 3
texture = ExtResource("13_6ni85")
region_enabled = true
region_rect = Rect2(0, 0, 4096, 4096)

[node name="planet_layer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.05, 0.05)
motion_offset = Vector2(1024, 1024)
motion_mirroring = Vector2(32184, 32184)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/planet_layer"]
texture_repeat = 3
texture = ExtResource("5_vceff")
region_rect = Rect2(0, 0, 2048, 2048)

[node name="background_layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.003, 0.003)
motion_offset = Vector2(2048, 2230)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/background_layer3"]
texture_repeat = 3
texture = ExtResource("14_vceff")
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(0, 0, 4096, 4096)

[node name="background_layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.004, 0.004)
motion_offset = Vector2(2048, 2230)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/background_layer4"]
texture_repeat = 3
texture = ExtResource("14_vceff")
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(0, 0, 4096, 4096)

[node name="GUI" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -883.0
offset_bottom = -511.0
grow_horizontal = 2
grow_vertical = 2
text = "1 vs 1"
label_settings = SubResource("LabelSettings_gqr64")

[node name="sonar_display" type="ColorRect" parent="GUI"]
material = SubResource("ShaderMaterial_th0af")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_m8v8v")

[node name="reverse_marker" type="Label" parent="GUI"]
visible = false
offset_left = 14.0
offset_top = 149.0
offset_right = 54.0
offset_bottom = 172.0
text = "l<<"
label_settings = SubResource("LabelSettings_vceff")

[node name="sonar_sensor" type="RayCast2D" parent="."]
position = Vector2(576, 324)
rotation = -1.47131
target_position = Vector2(5000, 0)
script = ExtResource("4_3fx1x")
rotation_speed = 0.05

[node name="target_assist" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("6_cj32i")

[node name="collsion_shape" type="CollisionShape2D" parent="target_assist"]
shape = SubResource("CircleShape2D_58h07")

[node name="debris" type="Node" parent="."]

[node name="enemy_carrier_ship" type="RigidBody2D" parent="debris"]
position = Vector2(1477, -387)
collision_layer = 2
collision_mask = 3
script = ExtResource("15_p0caf")

[node name="Sprite2D" type="Sprite2D" parent="debris/enemy_carrier_ship"]
texture = ExtResource("10_66ngm")

[node name="team" type="Node2D" parent="debris/enemy_carrier_ship"]
script = ExtResource("11_hwhwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="debris/enemy_carrier_ship"]
position = Vector2(7, -6)
shape = SubResource("CircleShape2D_o607b")

[node name="temporal_recorder" type="Node2D" parent="debris/enemy_carrier_ship"]
script = ExtResource("2_kjq4e")

[node name="health" type="Node2D" parent="debris/enemy_carrier_ship"]
script = ExtResource("18_h4dll")

[node name="target_arrow" type="Sprite2D" parent="debris/enemy_carrier_ship"]
visible = false
position = Vector2(4, 0)
scale = Vector2(2.96875, 2.96875)
texture = ExtResource("19_p0caf")

[node name="meteor" type="RigidBody2D" parent="debris"]
position = Vector2(435, -218)
collision_layer = 2
script = ExtResource("15_p0caf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="debris/meteor"]
rotation = 1.52542
shape = SubResource("CapsuleShape2D_jscwi")

[node name="Sprite2D" type="Sprite2D" parent="debris/meteor"]
texture = ExtResource("5_7e0bu")

[node name="temporal_recorder" type="Node2D" parent="debris/meteor"]
script = ExtResource("2_kjq4e")

[node name="combatants" type="Node" parent="."]

[node name="character" parent="combatants" node_paths=PackedStringArray("target_assist_shape") instance=ExtResource("2_sm623")]
position = Vector2(576, 324)
rotation = 2.35619
team_id = 1
color = Color(1, 1, 1, 1)
target_assist_shape = NodePath("../../target_assist/collsion_shape")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="combatants/character"]
remote_path = NodePath("../../../sonar_sensor")
update_rotation = false

[node name="cam" type="Camera2D" parent="combatants/character"]
zoom = Vector2(0.5, 0.5)

[node name="temporal_recorder" type="Node2D" parent="combatants/character"]
script = ExtResource("2_kjq4e")
triggers_per_second = 20

[node name="enemy" parent="combatants" instance=ExtResource("2_sm623")]
position = Vector2(1000, 200)
rotation = 3.14159
team_id = 2
spawn_position = Vector2(1000, 200)
color = Color(1, 0, 0, 1)

[node name="ai_control" type="Node2D" parent="combatants/enemy"]
rotation = 3.14159
script = ExtResource("5_3g8p0")

[node name="temporal_recorder" type="Node2D" parent="combatants/enemy"]
script = ExtResource("2_kjq4e")
triggers_per_second = 20

[connection signal="body_entered" from="target_assist" to="target_assist" method="_on_body_entered"]
[connection signal="body_exited" from="target_assist" to="target_assist" method="_on_body_exited"]
